practica56/practica56.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-flask-v2-deploy
spec:
  selector:
    matchLabels:
      app: python-flask-v2
  replicas: 1
  template:
    metadata:
      labels:
        app: python-flask-v2
    spec:
      containers:
        - name: python-flask-v2-container
          image: index.docker.io/machacamoya/pruebas-openshift:python-flask-v2.0
          volumeMounts:
            - mountPath: /log/
              name: python-flask-log
              readOnly: false
            - mountPath: /config/
              name: cnfmap-flask
              readOnly: true
            - mountPath: /secret 
              name: application-sensitive-config
              readOnly: true
          workingDir: /opt/app
      volumes:
        - name: python-flask-log
          persistentVolumeClaim: 
            claimName: log-pvc
            readOnly: false
        - name: cnfmap-flask
          configMap:
            name: cnfmap-python-flask
        - name: application-sensitive-config
          secret:
            secretName: application-sensitive-config
