practica56/practica56-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: practica56-svc
spec:
  selector:
    app: practica56
  ports:
    - protocol: TCP
      port: 9081
      targetPort: 9081
