practica56/practica56-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: practica56
  namespace: pcm
spec:
  host: practica56-pcm1.apps-crc.testing
  to:
    kind: Service
    name: practica56-svc
  port:
    targetPort: 9081
